force-app/main/default/objects/Case/fields/Accident_Location__c.field-meta.xml
<CustomField>
    <fullName>Accident_Location__c</fullName>
    <label>Accident Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>