force-app/main/default/objects/Case/fields/Funding_Requested__c.field-meta.xml
<CustomField>
    <fullName>Funding_Requested__c</fullName>
    <label>Funding Requested</label>
    <length>25</length>
    <type>Text</type>
</CustomField>