force-app/main/default/objects/Case/fields/IGD__Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>IGD__Collection_Id__c</fullName>
    <label>Collection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>