force-app/main/default/objects/Case/fields/Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Name__c</fullName>
    <label>Lawyer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>