force-app/main/default/objects/Case/fields/Nature_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Injury__c</fullName>
    <label>Nature of Injury</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>